src/objects/Proposal_Team_Calc__c.object
<CustomObject>
    <description>Stores Amounts for each Proposal Team Member based on Project Funding, and % Split for each member by Year</description>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Allocated Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Year__c</fullName>
        <label>Allocated Year</label>
        <picklist>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Use this to enable simple update based on unique key of Funding + Team Member + Year</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Team__c</fullName>
        <label>Proposal Team</label>
        <referenceTo>Proposal_Team__c</referenceTo>
        <relationshipLabel>Proposal Team Calculations</relationshipLabel>
        <relationshipName>Proposal_Team_Calculations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Proposal Team Calculation</label>
    <nameField>
        <displayFormat>PCN-{000}</displayFormat>
        <label>PCN Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Team Calculations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>